Merge branch 'main' into performance
Signed-off-by: Simon Dudley <simon.dudley@consensys.net>